--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "The serverless Postlight Parser API",
   "main": "src/handler.js",
   "engines": {
-    "node": ">=24.0.0"
+    "node": "22.x"
   },
   "scripts": {
     "deploy:env": "cross-env-shell sls deploy --stage $NODE_ENV",
